# data-frontend

backend/: Dockerfile  README.md  manage.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e33bb845793c_auto_migration.py  fc150bd13ee2_initial_migration.py
backend/app/: main.py
backend/app/config/: __init__.py  config.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/routes/: auth.py  health.py
backend/app/schemas/: auth.py
backend/app/services/: auth.py
backend/app/utils/: logger.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py
backend/tests/unit/: test_auth_service.py
